basic app working

--- a/datagrep/backend/env.example
+++ b/datagrep/backend/env.example
@@ -12,3 +12,8 @@ POSTGRES_DB=your_database
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 
+# Slack Bot Configuration (optional, for Slack bot PoC)
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+SLACK_APP_TOKEN=xapp-your-slack-app-token
+DATAGREP_API_URL=http://localhost:8000
+
