--- a/datagrep/docker-compose.yml
+++ b/datagrep/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_KEY=${SUPABASE_KEY}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=datagrep
-      - POSTGRES_USER=datagrep
-      - POSTGRES_PASSWORD=datagrep_dev
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ./backend:/app
       - /tmp:/tmp
@@ -39,11 +39,11 @@ services:
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
       - SLACK_APP_TOKEN=${SLACK_APP_TOKEN}
       - DATAGREP_API_URL=http://backend:8000
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=datagrep
-      - POSTGRES_USER=datagrep
-      - POSTGRES_PASSWORD=datagrep_dev
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ./backend:/app
       - /tmp:/tmp
@@ -76,9 +76,9 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      - POSTGRES_DB=datagrep
-      - POSTGRES_USER=datagrep
-      - POSTGRES_PASSWORD=datagrep_dev
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
@@ -102,4 +102,3 @@ networks:
 
 volumes:
   postgres_data:
-
