--- a/datagrep/backend/Dockerfile.sandbox
+++ b/datagrep/backend/Dockerfile.sandbox
@@ -11,13 +11,17 @@ WORKDIR /code
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
+    libfreetype6 \
+    libpng16-16 \
+    fonts-dejavu-core \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies for data processing
 RUN pip install --no-cache-dir \
     pandas==2.1.3 \
     psycopg2-binary==2.9.9 \
-    numpy==1.24.3
+    numpy==1.24.3 \
+    matplotlib==3.8.2
 
 # Switch to non-root user
 USER sandbox
@@ -27,4 +31,3 @@ WORKDIR /code
 
 # Default command (will be overridden)
 CMD ["python", "--version"]
-
